# lib

./: .gitignore  Cargo.toml  README.md
_wave-insight/: Cargo.toml
_wave-insight/src/: main.rs  wish.rs
dev/: Cargo.toml
dev/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs  parser.rs  structure.rs  wave.rs
server/: Cargo.toml  build.rs
server/src/: main.rs
src/: app.rs  lib.rs  log.rs  parser.rs  shell.rs  shell.tcl  structure.rs  test.rs  wave.rs  wish.rs
src/structure/: constructor.rs  module.rs  serde_impl.rs  test.rs  wire.rs
tests/: bincode  input.vcd  parser.ron  structure.json  structure.ron  test.tcl
wave-insight/: Cargo.toml  build.rs
wave-insight/src/: app.rs  main.rs  wish.tcl
wave-insight/src/server/: Cargo.toml
wave-insight/src/server/src/: lib.rs
web/: Cargo.toml  package.json  webpack.config.js
web/src/: app.rs
web/static/: index.html
