[package]
name = "wave-insight-lib"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
authors = ["Junzhuo <zhou@junzhuo.me>"]
description = "A efficient web-based wave viewer API"
keywords = ["vcd", "wave-viewer", "http", "broswer-based"]
readme = "README.md"
homepage = "https://wave-insight.io"
repository = "https://github.com/Wave-Insight/lib"
documentation = "https://docs.rs/wave-insight/"
include = [
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  ".gitignore",
  "Cargo.toml",
  "src/*.rs",
  "src/*/*.rs",
  "tests/*.rs",
#   "build.rs"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
# Parser
hashbrown = "0.12.0"
nom = "7.1.0"
# Deserialize & Serialize
# serde = { version = "1.0", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
ron = "0.7"
# TCL
# molt = "0.3.1"
# [badges]
# travis-ci = { repository = "kevinmehall/rust-vcd" }

[dev-dependencies] 
# bincode = { version = "0.8.0" }
# num-iter = { version = "0.1.35", default-features = false }


[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
all-features = true