[package]
name = "wave-insight-lib"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
authors = ["Junzhuo <zhou@junzhuo.me>"]
description = "A efficient web-based wave viewer API"
keywords = ["VCD-Parser", "Waveform-Viewer", "Broswer-Based", "lib"]
categories = ["development-tools"]
readme = "README.md"
homepage = "https://wave-insight.io"
repository = "https://github.com/Wave-Insight/lib"
documentation = "https://docs.rs/crate/wave-insight-lib/latest"
include = [
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  ".gitignore",
  "Cargo.toml",
  "src/*.rs",
  "src/*/*.rs",
  "tests/*.rs",
#   "build.rs"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
[build]
target = ["aarch64-apple-darwin"]

[dependencies]
hashbrown = "0.12.0"
# nom = "7.1.0"
# ux = "0.1.5"
serde = "1.0"
serde_json = "1.0"
bincode = {version = "2.0.0-rc.1",features = ["serde"]}
serde_derive = "1.0.136"
bitvec = "1.0.1"
tokio = { version = "1.21.1", features = ["full", "tracing"] }
molt = "0.3.1"
molt-shell = "0.3.1"
build-time = "0.1.2"
colored = "2.0.0"
clap = "4.0.4"
# TCL
# molt = "0.3.1"
# [badges]
# travis-ci = { repository = "kevinmehall/rust-vcd" }

# [dev-dependencies] 
# bincode = { version = "0.8.0" }
# num-iter = { version = "0.1.35", default-features = false }


[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
all-features = true