[package]
name = "_wave-insight"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wave-insight-lib = { path = "../lib" }
molt = "0.3.1"
molt-shell = "0.3.1"
colored = "2.0.0"
clap = "4.0.4"
build-time = "0.1.2"
# [dependencies.tungstenite]
# version = "0.17.2"
# default-features = false