[package]
name = "wave-insight"
version = "0.1.0"
edition = "2021"
readme = "README.md"
homepage = "https://wave-insight.io"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [workspace]
# members = [
#     "src/server"
# ]

[dependencies]
server = { path = "src/server" }

# [dependencies]
# actix-web = "4.0"
# uuid = {version = "1.1.2", features = ["v4"]}
# actix = "0.13"
actix-web = "4.1"
# actix-web-actors = "4.1"
actix-web-static-files = "4.0"
static-files = "0.2.1"
# hashbrown = "0.12.0"
# lazy_static = "1.4.0"
# wave-insight-lib = { path = "../lib" }
colored = "2.0.0"
# clap = "4.0.4"
build-time = "0.1.2"

[build-dependencies]
static-files = "0.2.1"