[package]
name = "yew-wasm-pack-template"
version = "0.2.0"
authors = ["Yew Maintainers <maintainers@yew.rs"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# If you uncomment this line, it will enable `wee_alloc`:
default = ["wee_alloc"]

[dependencies]
log = "0.4.16"
strum = "0.24.1"
strum_macros = "0.24.1"
serde = "1.0.145"
serde_derive = "1.0.145"
wasm-bindgen = "0.2.83"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.5", optional = true }
yew = "0.17.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[dependencies.web-sys]
version = "0.3.6"
features = [
  'KeyboardEvent',
]
